--- a/app/src/main/res/layout/item_nota.xml
+++ b/app/src/main/res/layout/item_nota.xml
@@ -2,6 +2,7 @@
 <layout>
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="nota"
             type="br.com.alura.ceep.model.Nota" />
@@ -24,6 +25,8 @@
                 android:id="@+id/item_nota_imagem"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                app:carregarImagemUrl="@{nota.imagemUrl}"
+                android:visibility="@{nota.imagemUrl.isEmpty() ? View.GONE : View.VISIBLE}"
                 android:contentDescription="@string/imagem_da_nota"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +37,7 @@
                 android:id="@+id/item_nota_favorita"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="@{nota.favorita ? View.VISIBLE : View.GONE}"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/ic_action_favorita"
                 android:contentDescription="@string/imagem_nota_favorita"
@@ -70,6 +74,7 @@
                 android:ellipsize="end"
                 android:maxLines="5"
                 android:textSize="18sp"
+                android:text="@{nota.descricao}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/item_nota_titulo"
