--- a/app/src/main/res/layout/item_nota.xml
+++ b/app/src/main/res/layout/item_nota.xml
@@ -9,7 +9,7 @@
             type="View.OnClickListener" />
         <variable
             name="nota"
-            type="br.com.alura.ceep.model.Nota" />
+            type="br.com.alura.ceep.ui.databinding.NotaData" />
     </data>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
